--- a/src/main/resources/com/mycompany/serverxogame/primary.fxml
+++ b/src/main/resources/com/mycompany/serverxogame/primary.fxml
@@ -7,6 +7,6 @@
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.serverxogame.PrimaryController">
    <children>
       <PieChart fx:id="pieChart" layoutX="50.0" />
-      <Button fx:id="btmBack" layoutX="41.0" layoutY="26.0" mnemonicParsing="false" style="-fx-background-color: #FFC72C; -fx-background-radius: 50; -fx-text-fill: #2C3E50; -fx-font-size: 16px; -fx-font-weight: bold; -fx-padding: 10 30 10 30; -fx-cursor: hand; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.2), 10, 0, 0, 5);" text="Back" />
+      <Button fx:id="btnBack" layoutX="41.0" layoutY="26.0" mnemonicParsing="false" onAction="#onActionBack" style="-fx-background-color: #FFC72C; -fx-background-radius: 50; -fx-text-fill: #2C3E50; -fx-font-size: 16px; -fx-font-weight: bold; -fx-padding: 10 30 10 30; -fx-cursor: hand; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.2), 10, 0, 0, 5);" text="Back" />
    </children>
 </AnchorPane>
