--- a/src/main/resources/com/mycompany/serverxogame/primary.fxml
+++ b/src/main/resources/com/mycompany/serverxogame/primary.fxml
@@ -1,12 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.serverxogame.PrimaryController">
+<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="650.0" spacing="20.0" 
+      xmlns="http://javafx.com/javafx/25" 
+      xmlns:fx="http://javafx.com/fxml/1" 
+      fx:controller="com.mycompany.serverxogame.PrimaryController" 
+      style="-fx-background-color: linear-gradient(to bottom, #ffd1e8, #c8b3ff, #a0ffff);">
+   
    <children>
-      <PieChart fx:id="pieChart" layoutX="50.0" />
-      <Button fx:id="btnBack" layoutX="41.0" layoutY="26.0" mnemonicParsing="false" onAction="#onActionBack" style="-fx-background-color: #FFC72C; -fx-background-radius: 50; -fx-text-fill: #2C3E50; -fx-font-size: 16px; -fx-font-weight: bold; -fx-padding: 10 30 10 30; -fx-cursor: hand; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.2), 10, 0, 0, 5);" text="Back" />
+      <PieChart fx:id="pieChart" prefHeight="450.0" prefWidth="600.0" title="Players Statistics" 
+                style="-fx-font-size: 18px; -fx-font-weight: bold; -fx-pie-label-visible: true;" />
+
+      <Button fx:id="btnBack" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#onActionBack" prefHeight="50.0" prefWidth="200.0" 
+              style="-fx-background-color: #A569FF; -fx-background-radius: 50; -fx-padding: 10px 40px; -fx-font-size: 22px; -fx-font-weight: bold; -fx-text-fill: #FFFFFF; -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.3), 10, 0.5, 0, 0); -fx-font-style: italic;" 
+              text="Back" textAlignment="CENTER">
+         <font>
+            <Font name="System Bold Italic" size="22.0" />
+         </font>
+         <VBox.margin>
+            <Insets top="20.0" />
+         </VBox.margin>
+      </Button>
    </children>
-</AnchorPane>
+   <padding>
+      <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+   </padding>
+</VBox>
