--- a/src/main/resources/com/mycompany/serverxogame/server_run.fxml
+++ b/src/main/resources/com/mycompany/serverxogame/server_run.fxml
@@ -1,11 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.serverxogame.Server_runController">
+<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="650.0" spacing="40.0" 
+      xmlns="http://javafx.com/javafx/25" 
+      xmlns:fx="http://javafx.com/fxml/1" 
+      fx:controller="com.mycompany.serverxogame.Server_runController" 
+      style="-fx-background-color: linear-gradient(to bottom, #ffd1e8, #c8b3ff, #a0ffff);">
+   
    <children>
-      <Button fx:id="ServerStateButton" layoutX="210.0" layoutY="109.0" mnemonicParsing="false" onAction="#runTheServer" prefHeight="46.0" prefWidth="179.0" style="-fx-background-radius: 50;" text="Server State" />
-      <Button fx:id="PlayerStatusButton" layoutX="210.0" layoutY="257.0" mnemonicParsing="false" onAction="#showPlayerStatus" prefHeight="46.0" prefWidth="179.0" style="-fx-background-radius: 50;" text="Player Status" />
+      <Button fx:id="ServerStateButton" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#runTheServer" prefHeight="60.0" prefWidth="300.0" 
+              style="-fx-background-color: #A569FF; -fx-background-radius: 50; -fx-padding: 10px 40px; -fx-font-size: 25px; -fx-font-weight: bold; -fx-text-fill: #FFFFFF; -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.3), 10, 0.5, 0, 0); -fx-font-style: italic; -fx-min-width: 300px;" 
+              text="Start Server" textAlignment="CENTER">
+         <font>
+            <Font name="System Bold Italic" size="25.0" />
+         </font>
+      </Button>
+
+      <Button fx:id="PlayerStatusButton" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#showPlayerStatus" prefHeight="60.0" prefWidth="300.0" 
+              style="-fx-background-color: #A569FF; -fx-background-radius: 50; -fx-padding: 10px 40px; -fx-font-size: 25px; -fx-font-weight: bold; -fx-text-fill: #FFFFFF; -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.3), 10, 0.5, 0, 0); -fx-font-style: italic; -fx-min-width: 300px;" 
+              text="Player Status" textAlignment="CENTER">
+         <font>
+            <Font name="System Bold Italic" size="25.0" />
+         </font>
+      </Button>
    </children>
-</AnchorPane>
+</VBox>
